# batin

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  docs.yml  release.yml
Formula/: batin.rb
benches/: benchmarks.rs
capi/: Cargo.toml
capi/include/: batin.h
capi/src/: lib.rs
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
docs/docs/developer/: architecture.md  contributing.md  detection-pipeline.md  fuzzing.md  module-structure.md  testing.md
docs/docs/developer/api/: detection-config.md  entropy-profile.md  file-type.md  threat-types.md
docs/docs/developer/concepts/: embedded-threats.md  entropy-analysis.md  magic-bytes.md  polyglot-detection.md  threat-assessment.md
docs/docs/developer/modules/: archive.md  batch.md  embedded.md  entropy.md  polyglot.md  signatures.md  validation.md
docs/docs/user/: cli-reference.md  configuration.md  custom-signatures.md  digital-forensics.md  installation.md  integrations.md  intro.md  malware-analysis.md  output-formats.md  quickstart.md  threat-levels.md  threat-model.md  use-cases.md  yara.md
docs/i18n/ar/: code.json
docs/i18n/ar/docusaurus-plugin-content-docs/: current.json
docs/i18n/ar/docusaurus-plugin-content-docs/current/developer/: architecture.md  contributing.md  detection-pipeline.md  fuzzing.md  module-structure.md  testing.md
docs/i18n/ar/docusaurus-plugin-content-docs/current/developer/api/: detection-config.md  entropy-profile.md  file-type.md  threat-types.md
docs/i18n/ar/docusaurus-plugin-content-docs/current/developer/concepts/: embedded-threats.md  entropy-analysis.md  magic-bytes.md  polyglot-detection.md  threat-assessment.md
docs/i18n/ar/docusaurus-plugin-content-docs/current/developer/modules/: archive.md  batch.md  embedded.md  entropy.md  polyglot.md  signatures.md  validation.md
docs/i18n/ar/docusaurus-plugin-content-docs/current/user/: cli-reference.md  configuration.md  digital-forensics.md  installation.md  intro.md  malware-analysis.md  output-formats.md  quickstart.md  threat-levels.md  use-cases.md
docs/i18n/ar/docusaurus-theme-classic/: footer.json  navbar.json
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
docs/static/: CNAME
examples/: archive_scanning.rs  basic_usage.rs  pe_analysis.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_archive.rs  fuzz_binary.rs  fuzz_detect.rs  fuzz_entropy.rs
packaging/aur/: .SRCINFO  PKGBUILD
packaging/chocolatey/: batin.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1
packaging/debian/: batin.install  changelog  control  copyright  rules
packaging/freebsd/: Makefile  distinfo  pkg-descr
packaging/rpm/: batin.spec
packaging/scripts/: update-release-metadata.sh
src/: lib.rs  main.rs  reputation.rs  utils.rs
src/analysis/: forensics.rs  mod.rs  pe_parser.rs  validation.rs
src/cli/: console.rs  scanner.rs  serve.rs  signal.rs  watcher.rs
src/detection/: detector.rs  embedded.rs  entropy.rs  mod.rs  polyglot.rs  signatures.rs  yara.rs
src/io/: archive.rs  batch.rs  hasher.rs  mod.rs
tests/: archive_tests.rs  cli_tests.rs  integration_tests.rs  serve_tests.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
