[package]
name = "batin"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = ["Ahmed Walid <devahmedwalid@proton.me>"]
license = "GPL-3.0-only"
description = "Security-hardened file type detection with entropy analysis for cybersecurity applications"
keywords = ["security", "forensics", "file-detection", "entropy", "malware"]
categories = ["cryptography", "filesystem", "command-line-utilities"]
repository = "https://github.com/ahmeddwalid/batin"
homepage = "https://github.com/ahmeddwalid/batin"
readme = "README.md"

[dependencies]
# Core (sync detection path has no async/thread deps, so it builds for wasm)
thiserror = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# Async & parallelism (optional; enabled by the `async` feature)
tokio = { version = "1.35", features = ["full"], optional = true }
rayon = { version = "1.8", optional = true }
futures = { version = "0.3", optional = true }

# Logging & Tracing (optional; used by the CLI)
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

# HTTP client for online reputation lookups (optional)
ureq = { version = "2.10", optional = true }

# Hashing (optional)
sha2 = { version = "0.10", optional = true }
md-5 = { version = "0.10", optional = true }

# Binary parsing (optional)
goblin = { version = "0.8", optional = true }

# YARA rule scanning (optional, pure-Rust)
yara-x = { version = "1.17", optional = true }

# Archive handling (optional)
zip = { version = "0.6", optional = true }
tar = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true }

# CLI enhancements (optional)
clap = { version = "4.4", features = ["derive"], optional = true }
clap_complete = { version = "4.4", optional = true }
clap_mangen = { version = "0.2", optional = true }
colored = { version = "2.1", optional = true }
comfy-table = { version = "7.1", optional = true }
notify = { version = "6.1", optional = true }
indicatif = { version = "0.17", optional = true }
chrono = { version = "0.4", optional = true }

# Serialization
csv = "1.3"

# File system utilities
walkdir = "2.4"
glob = "0.3"

[features]
default = ["full"]
# `full` deliberately excludes `yara`, `server`, and `online` to keep the
# default build light. Enable those explicitly when needed.
full = ["async", "hashing", "binary-parsing", "archive", "cli"]
# Async I/O + parallelism (file-path detection, batch processing). Excluding
# this leaves only the synchronous `from_bytes` path, which builds for wasm.
async = ["dep:tokio", "dep:rayon", "dep:futures"]
hashing = ["dep:sha2", "dep:md-5"]
binary-parsing = ["dep:goblin"]
archive = ["dep:zip", "dep:tar", "dep:flate2"]
yara = ["dep:yara-x"]
# HTTP API daemon (`batin serve`).
server = ["async", "cli"]
# Online hash-reputation lookups (e.g. VirusTotal).
online = ["dep:ureq", "hashing"]
# The CLI needs async I/O, hashes, archives, and a logger.
cli = ["async", "archive", "hashing", "dep:clap", "dep:clap_complete", "dep:clap_mangen", "dep:colored", "dep:comfy-table", "dep:indicatif", "dep:notify", "dep:chrono", "dep:tracing", "dep:tracing-subscriber"]

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.1"
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"

[lib]
name = "batin"
path = "src/lib.rs"

[[bin]]
name = "batin"
path = "src/main.rs"
required-features = ["cli"]

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "archive_scanning"
path = "examples/archive_scanning.rs"
required-features = ["archive"]

[[example]]
name = "pe_analysis"
path = "examples/pe_analysis.rs"
required-features = ["binary-parsing"]

[[bench]]
name = "benchmarks"
harness = false

# cargo-binstall support
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "bin"

