[package]
name = "batin-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
batin = { path = "..", features = ["binary-parsing", "archive", "hashing"] }

[[bin]]
name = "fuzz_detect"
path = "fuzz_targets/fuzz_detect.rs"
test = false
doc = false

[[bin]]
name = "fuzz_archive"
path = "fuzz_targets/fuzz_archive.rs"
test = false
doc = false

[[bin]]
name = "fuzz_entropy"
path = "fuzz_targets/fuzz_entropy.rs"
test = false
doc = false

[[bin]]
name = "fuzz_binary"
path = "fuzz_targets/fuzz_binary.rs"
test = false
doc = false
